UIP-1547 : fix button distortion when MultiDrag labels are long/wrap (caused by flexbox)

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -230,6 +230,7 @@ button,
             padding: 0;
             height: $size;
             width: $size;
+            min-width: $size;
             text-align: center;
             line-height: $size;
 
